package br.com.caio.padroes.estruturais.flyweight;

public interface Flyweight {
    void operation(int extrinsicState);
}